security feature using the keycloak and single database